# dump

./: .gitignore  BUILD_VERIFICATION.md  Makefile  PERFORMANCE.md  README.md  go.mod  go.sum  main.go  sample.jsonl  sample_schema.yaml  test_input.jsonl  test_schema.yaml
.github/workflows/: release.yml
api/: main.go
app/: README.md  index.html  package.json  pnpm-lock.yaml
app/extension/: README.md  devtools.html  devtools.js  manifest.json  panel.html  panel.js
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
cmd/: analyze.go  audit.go  crypto_cmd.go  decode.go  diff.go  fanout.go  generate.go  infer.go  ingest.go  map.go  mirror.go  nl2s.go  proxy.go  root.go  scan.go  stress.go  verify.go
cmd/wasm/: main.go
demo/: README.md  clean_crm.parquet  demo_capture.txt  legacy_crm.jsonl  run_demo.sh
docs/: DEMO_COMMANDS.sh  HACKER_NEWS_PITCH.md  README.md  demo_schema.yaml
internal/config/: fanout.go
internal/core-rs/: Cargo.toml
internal/core-rs/src/: arrow_ipc.rs  crypto.rs  lib.rs  mapper.rs
internal/crypto/: audit.go  keys.go  verify_audit.go
internal/dialects/: dialect.go  hl7_adt.yaml  std.go
internal/engine/: bench_test.go  binary_reader.go  binary_reader_test.go  db_analyzer.go  detector.go  detector_test.go  diff.go  edi_reader.go  excel_reader.go  fanout.go  (+24 more)
scripts/: verify_build.sh
testdata/: README.md  fanout.yaml  fanout_out.jsonl  fanout_out.parquet  sample.csv  sample.hl7  sample.jsonl  sample.xml  schema_edi.yaml  schema_passthrough.yaml  schema_xml.yaml  telemetry_binary_schema.yaml  x12_837_dialect.yaml
(+38 files in other folders)
